# MapProjects

./: .clang-format  .gitignore  CMakeLists.txt  README.md
MapSimulation/: .gitignore  CMakeLists.txt  README.md
MapSimulation/assets/: impassable_crossings.txt  river_lines.txt  river_tiles.txt  rivers.txt  sea_tiles.txt
MapSimulation/libs/stb_image/: stb_image.h
MapSimulation/notes/: Character.md  Land.md  Pops.md  Tag.md
MapSimulation/shaders/: crossings.frag  map.frag  rivers.frag
MapSimulation/src/: main.cpp
MapSimulation/src/Base/: AI.hpp  Image.hpp  Province.cpp  Province.hpp  Utils.hpp
MapSimulation/src/Populations/: Character.cpp  Character.hpp  Pop.hpp
MapSimulation/src/Tags/: Country.hpp  Tag.hpp
MapSimulation/src/Warfare/: Army.cpp  Army.hpp
MapSimulation/src/controller/: data.hpp  image.cpp  image.hpp  load_image.cpp  load_image.hpp  simulation.cpp  simulation.hpp
MapSimulation/src/features/: ai.cpp  ai.hpp  army.cpp  army.hpp  character.cpp  character.hpp  data.cpp  data.hpp  date.cpp  date.hpp  pop.cpp  pop.hpp  province.cpp  province.hpp  river.cpp  river.hpp  tag.cpp  tag.hpp  unit.cpp  unit.hpp
MapSimulation/src/features/ai/: action.cpp  action.hpp  action_base.hpp
MapSimulation/src/features/army/: army_properties.hpp
MapSimulation/src/features/base/: ai.cpp  ai.hpp  province.cpp  province.hpp  province_properties.hpp  utils.hpp
MapSimulation/src/features/character/: character_properties.hpp
MapSimulation/src/features/populations/: character.hpp  pop.hpp
MapSimulation/src/features/province/: province_properties.hpp
MapSimulation/src/features/tags/: tag.cpp  tag.hpp
MapSimulation/src/features/warfare/: army.cpp  army.hpp
MapSimulation/src/logic/: bitmap.cpp  bitmap.hpp  data.hpp  image.cpp  image.hpp  load_image.cpp  load_image.hpp  simulation.cpp  simulation.hpp
MapSimulation/src/mechanics/: ai.cpp  ai.hpp  army.cpp  army.hpp  character.cpp  character.hpp  data.cpp  data.hpp  date.cpp  date.hpp  event.cpp  event.hpp  map_mode.cpp  map_mode.hpp  pop.cpp  pop.hpp  province.cpp  province.hpp  tag.cpp  tag.hpp  tickable.hpp  unit.cpp  unit.hpp
MapSimulation/src/mechanics/ai/: action.hpp  action_base.hpp
MapSimulation/src/mechanics/army/: army_properties.hpp
MapSimulation/src/mechanics/character/: character_properties.hpp
MapSimulation/src/mechanics/province/: province_properties.hpp
MapSimulation/src/model/base/: ai.cpp  ai.hpp  province.cpp  province.hpp  utils.hpp
MapSimulation/src/model/populations/: character.cpp  character.hpp  pop.cpp
MapSimulation/src/model/tags/: country.hpp  tag.cpp  tag.hpp
MapSimulation/src/model/warfare/: army.cpp  army.hpp
MapSimulation/src/processing/: bitmap.cpp  bitmap.hpp  drawing.cpp  drawing.hpp  image.cpp  image.hpp  load_image.cpp  load_image.hpp  simulation.cpp  simulation.hpp  window.cpp  window.hpp
MapSimulation/src/ui/: drawing.cpp  drawing.hpp  window.cpp  window.hpp
MapSimulation/src/utils/: colors.hpp  flags.hpp  id_generator.cpp  id_generator.hpp  zstring_view.hpp
MapSimulation/src/view/: drawing.cpp  drawing.hpp  window.cpp  window.hpp
PopCapEstimate/: .gitignore  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PopCapEstimate.csproj
PopCapEstimate/assets/classifications/: vegetation.csv
PopCapEstimate/output/: climate-density.csv  climate-vegetation-density.csv
PopCapEstimate/src/: ClassificationMap.cs  ClimateMap.cs  DensityMap.cs  LandMap.cs  Map.cs  VegetationMap.cs
PopCapEstimate2/: .gitignore  KeyCombination.cs  MapImage.cs  Pair.cs  PopCapEstimate2.csproj  PopCapEstimate2.sln  Program.cs
PopCapEstimate2/classifications/: koppen.csv  soil.csv  vegetation.csv
ProvinceGenerator/: CMakeLists.txt
ProvinceGenerator/src/common/: image.cpp  image.hpp
ProvinceGenerator/src/province_files_generator/: main.cpp  province.cpp  province.hpp
ProvinceGenerator/src/province_generator/: main.cpp  map_generator.hpp  utils.hpp
ProvinceGenerator/src/sea_tile_generator/: main.cpp  sea_tile_file_fix.hpp  sea_tile_generator.hpp
notes/: AI.docx  AI.md  Land.docx  Land.md  Pops.docx  Pops.md
src/: main.cpp
src/Base/: AI.hpp  Action.hpp  Image.hpp  Province.cpp  Province.hpp  Utils.hpp
src/Characters/: Character.hpp
src/Populations/: Character.hpp  Pop.hpp
src/Tags/: Country.hpp  Tag.hpp
src/Warfare/: Army.cpp  Army.hpp  Unit.hpp
